# honua-sdk-python

./: .coveragerc  .git-msg-pr2.txt  .git-msg-pr3.txt  .git-msg-pr4.txt  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  INSTALL.md  README.md  RELEASE_CHECKLIST.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  conformance.yml  docs.yml  honua-arcpy-eval.yml  honua-gp-eval.yml  publish-python-sdk.yml  release-please.yml  security.yml  staging-integration.yml
compatibility/: protocol-factories.json  public-api.json  server-matrix.json
conformance/: fetch-fixtures.sh
docs/: README.md  auth.md  compatibility.md  core-client.md  demo-suite.md  examples.md  index.md  operating-cadence.md  pagination.md  protocol-examples.md  protocol-parity.md  quickstart.md  retries-and-timeouts.md  troubleshooting.md
docs/features/: README.md
docs/honua-arcpy/: README.md  codemod-translation-coverage.md  compatibility-matrix.md  scanner-handoff.md
docs/honua-gp/: README.md  codemod-translation-coverage.md  compatibility-matrix.md  scanner-handoff.md
docs/reference/: honua_admin.md  honua_sdk.md
docs/reference/honua-admin/: clients.md  errors.md  models.md
docs/reference/honua-sdk/: clients.md  errors.md  models.md  source-facade.md
examples/: README.md  __init__.py  data_quality_report.py  fastapi_spatial_service.py  protocol_clients.py  spatial_query_cookbook.py
examples/async_feature_service/: README.md  __init__.py  service.py
examples/geospatial_etl/: README.md  __init__.py  analyst_notebook.ipynb  run_etl.py  workflow.py
examples/geospatial_etl/data/: demo_sites.csv
examples/notebooks/: spatial_analysis_walkthrough.ipynb  spatial_analysis_walkthrough.py
examples/spatial_analysis/: __init__.py  analysis.py
honua_sdk/: __init__.py  _async_retry.py  async_client.py  async_geocoding.py  client.py  errors.py  geocoding.py  geopandas.py
honua_sdk/admin/: __init__.py  _async_client.py  _client.py  _models.py
honua_sdk/grpc/: __init__.py  _client.py  _proto_adapter.py
honua_sdk/grpc/_generated/honua/v1/: feature_service_pb2.py  feature_service_pb2.pyi  feature_service_pb2_grpc.py
latest/: 404.html  index.html  objects.inv
latest/auth/: index.html
latest/compatibility/: index.html
latest/core-client/: index.html
latest/demo-suite/: index.html
latest/examples/: index.html
latest/honua-arcpy/codemod-translation-coverage/: index.html
latest/honua-arcpy/compatibility-matrix/: index.html
latest/honua-arcpy/scanner-handoff/: index.html
latest/honua-gp/codemod-translation-coverage/: index.html
latest/honua-gp/compatibility-matrix/: index.html
latest/honua-gp/scanner-handoff/: index.html
latest/operating-cadence/: index.html
latest/pagination/: index.html
latest/protocol-examples/: index.html
latest/protocol-parity/: index.html
latest/quickstart/: index.html
latest/reference/honua-admin/clients/: index.html
latest/reference/honua-admin/errors/: index.html
latest/reference/honua-admin/models/: index.html
latest/reference/honua-sdk/clients/: index.html
latest/reference/honua-sdk/errors/: index.html
latest/reference/honua-sdk/models/: index.html
latest/reference/honua-sdk/source-facade/: index.html
latest/reference/honua_admin/: index.html
latest/reference/honua_sdk/: index.html
latest/retries-and-timeouts/: index.html
latest/search/: search_index.json
latest/troubleshooting/: index.html
scripts/: _conformance.py  _smoke_harness.py  backlog_review.py  compatibility_gate.py  gen_sync.py  generate_proto.sh  release_smoke.py  validate_publish_tag.py
tests/: conftest.py  test_arcpy_migration.py  test_arcpy_migration_cli.py  test_arcpy_migration_coverage_uplift.py  test_arcpy_migration_evidence.py  test_arcpy_migration_group_aware.py  test_arcpy_migration_hardening_coverage.py  test_arcpy_migration_modelbuilder.py  test_arcpy_migration_pyt.py  test_arcpy_migration_tool_coverage_slice.py  test_arcpy_migration_uplift.py  test_async_client.py  test_async_cursors.py  test_async_feature_service_example.py  test_async_geocoding.py  test_async_protocols.py  test_attachments_and_raster.py  test_audit_resource_lifecycle.py  test_audit_transport_dedup.py  test_auth.py  test_backlog_review.py  test_cli.py  test_client.py  test_compatibility_gate.py  test_copy_and_bearer_deprecation.py  test_cursors_and_geodataframe.py  test_endpoints.py  test_etl.py  test_gen_sync_targets.py  test_gen_sync_twins.py  test_geocoding.py  test_geometry_bridge.py  test_geopandas.py  test_geopandas_coverage_uplift.py  test_geopandas_roundtrip_spatial.py  test_geoprocessing.py  test_geoprocessing_raster.py  test_geoservices_error_envelope.py  test_geospatial_etl_example.py  test_gp_query_parity.py  (+25 more)
tests/admin/: conftest.py  test_arcpy_scanner.py  test_async_admin_client.py  test_async_ogc_styles.py  test_compatibility.py  test_connections.py  test_layers.py  test_manifests.py  test_metadata.py  test_migration.py  test_ogc_styles.py  test_services.py  test_shared_sdk_boundary.py  test_styles.py
tests/conformance/: conftest.py  test_live_conformance.py
tests/fixtures/arcpy/: automated_vector.py  parameters_env_redaction.py  unsupported_destructive.py
tests/fixtures/sdk-contract/: README.md  semantic-contract.v1.json
tests/grpc_sdk/: conftest.py  test_grpc_client.py  test_proto_adapter.py
tests/integration/: conftest.py  test_staging_protocol_surfaces.py  test_staging_read_smoke.py  test_staging_write_smoke.py
