# Workspace root -- individual packages live under packages/.
# This file configures shared dev tooling only.

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "honua-sdk-workspace"
version = "0.0.0"
description = "Workspace root for honua-sdk and honua-admin Python packages"
requires-python = ">=3.11"
# Not published -- this is a workspace root only.

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise a real Honua deployment",
    "staging: tests intended for the staging smoke lane",
    "smoke: lightweight release and CI smoke coverage",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "packages/honua-sdk/honua_sdk/grpc/_generated",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
